--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,10 @@ platform :ios, '9.0'
 target 'OhmageOMHSDK_Example' do
 
   pod 'OhmageOMHSDK', :path => '../'
-  
+  pod 'OhmageOMHSDK/RKSupport', :path => '../'
+
+  pod 'ResearchKit', '~> 1.3'
+
   target 'OhmageOMHSDK_Tests' do
     inherit! :search_paths
 
