Added support for web based auth for Ohmage
Now supports Google

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,6 +10,8 @@ target 'OhmageOMHSDK_Example' do
 
   pod 'ResearchKit', '~> 1.4'
 
+  pod 'OMHClient', :path => '../../OMHClient-ios'
+
   target 'OhmageOMHSDK_Tests' do
     inherit! :search_paths
 
