Added support for redirect login

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -11,6 +11,7 @@ target 'OhmageOMHSDK_Example' do
   pod 'ResearchKit', '~> 1.4'
 
   pod 'OMHClient', :path => '../../OMHClient-ios'
+  pod 'ResearchSuiteExtensions'
 
   target 'OhmageOMHSDK_Tests' do
     inherit! :search_paths
